// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepHorizontal is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiStepHorizontal testClass1 testClass2 euiStepHorizontal-isIncomplete"
  data-test-subj="test subject string"
  title="Step 1 is incomplete"
>
  <span
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props isComplete 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isComplete"
  title="Step 1 is complete"
>
  <span
    class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
  >
    <span
      aria-label="Step 1 is complete"
      class="euiStepNumber__icon"
      data-euiicon-type="check"
    />
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props isSelected 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isSelected"
  title="Current step is 1"
>
  <span
    class="euiStepNumber euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Current step is 1
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status complete is rendered 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isComplete"
  title="Step 1 is complete"
>
  <span
    class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
  >
    <span
      aria-label="Step 1 is complete"
      class="euiStepNumber__icon"
      data-euiicon-type="check"
    />
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status current is rendered 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isSelected"
  title="Current step is 1"
>
  <span
    class="euiStepNumber euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Current step is 1
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status danger is rendered 1`] = `
<button
  class="euiStepHorizontal"
  title="Step 1"
>
  <span
    class="euiStepNumber euiStepNumber--danger euiStepHorizontal__number"
  >
    <span
      aria-label="Step 1 has errors"
      class="euiStepNumber__icon"
      data-euiicon-type="cross"
    />
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status disabled is rendered 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isDisabled"
  title="Step 1 is disabled"
>
  <span
    class="euiStepNumber euiStepNumber--disabled euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 1 is disabled
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status incomplete is rendered 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1 is incomplete"
>
  <span
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status loading is rendered 1`] = `
<button
  class="euiStepHorizontal"
  title="Step 1"
>
  <span
    class="euiStepNumber euiStepNumber--loading euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 1 is loading
    </span>
    <span
      class="euiLoadingSpinner euiLoadingSpinner--xLarge euiStepNumber__loader"
    />
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status warning is rendered 1`] = `
<button
  class="euiStepHorizontal"
  title="Step 1 has warnings"
>
  <span
    class="euiStepNumber euiStepNumber--warning euiStepHorizontal__number"
  >
    <span
      aria-label="Step 1 has warnings"
      class="euiStepNumber__icon"
      data-euiicon-type="alert"
    />
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props step 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 5 is incomplete"
>
  <span
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 5 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      5
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props title 1`] = `
<button
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1: First step is incomplete"
>
  <span
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    <span
      class="euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title"
  >
    First step
  </span>
</button>
`;
